// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user displays 1`] = `
"<div data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"1405742363\\">
  <div data-reactid=\\"2\\">
    <!-- react-empty: 3 -->
    <div style=\\"padding-top:50px;padding-bottom:20px;\\" data-reactid=\\"4\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\" data-reactid=\\"5\\">
        <div class=\\"container\\" data-reactid=\\"6\\">
          <div class=\\"navbar-header\\" data-reactid=\\"7\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\" data-reactid=\\"8\\"><span class=\\"sr-only\\" data-reactid=\\"9\\">Toggle navigation</span><span class=\\"icon-bar\\" data-reactid=\\"10\\"></span><span class=\\"icon-bar\\" data-reactid=\\"11\\"></span><span class=\\"icon-bar\\" data-reactid=\\"12\\"></span></button>
            <a class=\\"navbar-brand\\"
              href=\\"/\\" data-reactid=\\"13\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\" data-reactid=\\"14\\">
            <ul class=\\"nav navbar-nav navbar-right\\" data-reactid=\\"15\\">
              <li class=\\"false\\" data-reactid=\\"16\\">
                <a href=\\"/\\" data-reactid=\\"17\\">Home</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"18\\">
                <a href=\\"/about\\" data-reactid=\\"19\\">About</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"20\\">
                <a href=\\"/news\\" data-reactid=\\"21\\">News</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"22\\">
                <a href=\\"/users\\" data-reactid=\\"23\\">Sorters</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"24\\">
                <a href=\\"/dashboard\\" data-reactid=\\"25\\">Dashboard</a>
              </li>
              <li class=\\"dropdownfalse\\" data-reactid=\\"26\\">
                <a href=\\"#\\" class=\\"dropdown-toggle\\" data-toggle=\\"dropdown\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"true\\" data-reactid=\\"27\\">
                  <!-- react-text: 28 -->Hello,
                  <!-- /react-text -->
                  <!-- react-text: 29 -->test
                  <!-- /react-text -->
                  <!-- react-text: 30 -->
                  <!-- /react-text --><span class=\\"caret\\" data-reactid=\\"31\\"></span></a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\" data-reactid=\\"32\\">
      <div data-reactid=\\"33\\">
        <div data-reactid=\\"34\\">
          <h1 data-reactid=\\"35\\">Test User</h1>
          <div class=\\"row\\" data-reactid=\\"36\\">
            <div class=\\"col-xs-6 col-sm-3 col-md-2\\" data-reactid=\\"37\\">
              <img alt=\\"Gravatar for undefined\\" style=\\"margin-bottom:24px;width:100%;height:auto;margin-left:auto;margin-right:auto;display:block;\\" src=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=200\\" srcset=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=400 2x\\"
                height=\\"200\\" width=\\"200\\" class=\\"react-gravatar\\" data-reactid=\\"38\\">
            </div>
            <div class=\\"col-xs-12 col-sm-9 col-md-10\\" data-reactid=\\"39\\">
              <p data-reactid=\\"40\\">
                <a href=\\"/u/test\\" data-reactid=\\"41\\">
                  <!-- react-text: 42 -->/u/
                  <!-- /react-text -->
                  <!-- react-text: 43 -->test
                  <!-- /react-text -->
                </a>
              </p>
              <div data-reactid=\\"44\\">
                <div class=\\"markdown\\" data-reactid=\\"45\\">
                  <p>Test user about</p>
                </div>
              </div>
            </div>
          </div>
          <ul class=\\"nav nav-tabs\\" data-reactid=\\"46\\">
            <li role=\\"presentation\\" class=\\"active\\" data-reactid=\\"47\\">
              <a href=\\"/u/test\\" data-reactid=\\"48\\">Activity</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"49\\">
              <a href=\\"/u/test/profile\\" data-reactid=\\"50\\">Profile</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"51\\">
              <a href=\\"/u/test/goals\\" data-reactid=\\"52\\">Goals</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"53\\">
              <a href=\\"/u/test/journal\\" data-reactid=\\"54\\">Journal</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"55\\">
              <a href=\\"/u/test/reads\\" data-reactid=\\"56\\">Reads</a>
            </li>
          </ul>
        </div>
        <h2 data-reactid=\\"57\\">Activity</h2>
        <div style=\\"margin-bottom:24px;\\" data-reactid=\\"58\\">
          <!-- react-text: 59 -->&#x1F4D6; Wants to read
          <!-- /react-text -->
          <a href=\\"/u/test/reads\\" data-reactid=\\"60\\">Read</a>
          <!-- react-text: 61 -->.
          <!-- /react-text -->
        </div>
        <div style=\\"margin-bottom:24px;\\" data-reactid=\\"62\\">
          <!-- react-text: 63 -->&#x1F4D6; Wants to read
          <!-- /react-text -->
          <a href=\\"/u/test/reads\\" data-reactid=\\"64\\">Read - reading</a>
          <!-- react-text: 65 -->.
          <!-- /react-text -->
        </div>
        <div style=\\"margin-bottom:24px;\\" data-reactid=\\"66\\">
          <!-- react-text: 67 -->&#x1F4D6; Wants to read
          <!-- /react-text -->
          <a href=\\"/u/test/reads\\" data-reactid=\\"68\\">Read - read</a>
          <!-- react-text: 69 -->.
          <!-- /react-text -->
        </div>
        <div style=\\"margin-bottom:24px;\\" data-reactid=\\"70\\">
          <!-- react-text: 71 -->&#x25CE; Wants to achieve
          <!-- /react-text -->
          <a href=\\"/u/test/goals\\" data-reactid=\\"72\\">Goal - done</a>
        </div>
        <div style=\\"margin-bottom:24px;\\" data-reactid=\\"73\\">
          <!-- react-text: 74 -->&#x25CE; Wants to achieve
          <!-- /react-text -->
          <a href=\\"/u/test/goals\\" data-reactid=\\"75\\">Goal</a>
        </div>
        <div style=\\"margin-bottom:24px;\\" data-reactid=\\"76\\">
          <!-- react-text: 77 -->&#x25CE; Wants to achieve
          <!-- /react-text -->
          <a href=\\"/u/test/goals\\" data-reactid=\\"78\\">Goal - doing</a>
        </div>
        <div style=\\"margin-bottom:24px;\\" data-reactid=\\"79\\">
          <!-- react-text: 80 -->&#x1F464; Updated
          <!-- /react-text -->
          <a href=\\"/u/test/profile\\" data-reactid=\\"81\\">profile</a>
          <!-- react-text: 82 -->.
          <!-- /react-text -->
        </div>
        <div style=\\"margin-bottom:24px;\\" data-reactid=\\"83\\">
          <!-- react-text: 84 -->&#x1F464; Updated
          <!-- /react-text -->
          <a href=\\"/u/test/profile\\" data-reactid=\\"85\\">profile</a>
          <!-- react-text: 86 -->.
          <!-- /react-text -->
        </div>
        <div style=\\"margin-bottom:24px;\\" data-reactid=\\"87\\">
          <!-- react-text: 88 -->&#x1F464; Updated
          <!-- /react-text -->
          <a href=\\"/u/test/profile\\" data-reactid=\\"89\\">profile</a>
          <!-- react-text: 90 -->.
          <!-- /react-text -->
        </div>
      </div>
    </div>
    <footer data-reactid=\\"91\\">
      <div class=\\"container\\" data-reactid=\\"92\\">
        <hr data-reactid=\\"93\\">
        <p data-reactid=\\"94\\">
          <!-- react-text: 95 -->Brought to you with &#x2764; by
          <!-- /react-text -->
          <a href=\\"/about\\" data-reactid=\\"96\\">Nick Redmark</a>
          <!-- react-text: 97 -->. Support and discuss the development of this platform on
          <!-- /react-text -->
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\" data-reactid=\\"98\\">Patreon</a>
          <!-- react-text: 99 -->.
          <!-- /react-text -->
        </p>
      </div>
    </footer>
  </div>
</div>"
`;

exports[`user displays goals 1`] = `
"<div data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"-738537327\\">
  <div data-reactid=\\"2\\">
    <!-- react-empty: 3 -->
    <div style=\\"padding-top:50px;padding-bottom:20px;\\" data-reactid=\\"4\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\" data-reactid=\\"5\\">
        <div class=\\"container\\" data-reactid=\\"6\\">
          <div class=\\"navbar-header\\" data-reactid=\\"7\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\" data-reactid=\\"8\\"><span class=\\"sr-only\\" data-reactid=\\"9\\">Toggle navigation</span><span class=\\"icon-bar\\" data-reactid=\\"10\\"></span><span class=\\"icon-bar\\" data-reactid=\\"11\\"></span><span class=\\"icon-bar\\" data-reactid=\\"12\\"></span></button>
            <a class=\\"navbar-brand\\"
              href=\\"/\\" data-reactid=\\"13\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\" data-reactid=\\"14\\">
            <ul class=\\"nav navbar-nav navbar-right\\" data-reactid=\\"15\\">
              <li class=\\"false\\" data-reactid=\\"16\\">
                <a href=\\"/\\" data-reactid=\\"17\\">Home</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"18\\">
                <a href=\\"/about\\" data-reactid=\\"19\\">About</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"20\\">
                <a href=\\"/news\\" data-reactid=\\"21\\">News</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"22\\">
                <a href=\\"/users\\" data-reactid=\\"23\\">Sorters</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"24\\">
                <a href=\\"/dashboard\\" data-reactid=\\"25\\">Dashboard</a>
              </li>
              <li class=\\"dropdownfalse\\" data-reactid=\\"26\\">
                <a href=\\"#\\" class=\\"dropdown-toggle\\" data-toggle=\\"dropdown\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"true\\" data-reactid=\\"27\\">
                  <!-- react-text: 28 -->Hello,
                  <!-- /react-text -->
                  <!-- react-text: 29 -->test
                  <!-- /react-text -->
                  <!-- react-text: 30 -->
                  <!-- /react-text --><span class=\\"caret\\" data-reactid=\\"31\\"></span></a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\" data-reactid=\\"32\\">
      <div data-reactid=\\"33\\">
        <div data-reactid=\\"34\\">
          <h1 data-reactid=\\"35\\">Test User</h1>
          <div class=\\"row\\" data-reactid=\\"36\\">
            <div class=\\"col-xs-6 col-sm-3 col-md-2\\" data-reactid=\\"37\\">
              <img alt=\\"Gravatar for undefined\\" style=\\"margin-bottom:24px;width:100%;height:auto;margin-left:auto;margin-right:auto;display:block;\\" src=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=200\\" srcset=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=400 2x\\"
                height=\\"200\\" width=\\"200\\" class=\\"react-gravatar\\" data-reactid=\\"38\\">
            </div>
            <div class=\\"col-xs-12 col-sm-9 col-md-10\\" data-reactid=\\"39\\">
              <p data-reactid=\\"40\\">
                <a href=\\"/u/test\\" data-reactid=\\"41\\">
                  <!-- react-text: 42 -->/u/
                  <!-- /react-text -->
                  <!-- react-text: 43 -->test
                  <!-- /react-text -->
                </a>
              </p>
              <div data-reactid=\\"44\\">
                <div class=\\"markdown\\" data-reactid=\\"45\\">
                  <p>Test user about</p>
                </div>
              </div>
            </div>
          </div>
          <ul class=\\"nav nav-tabs\\" data-reactid=\\"46\\">
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"47\\">
              <a href=\\"/u/test\\" data-reactid=\\"48\\">Activity</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"49\\">
              <a href=\\"/u/test/profile\\" data-reactid=\\"50\\">Profile</a>
            </li>
            <li role=\\"presentation\\" class=\\"active\\" data-reactid=\\"51\\">
              <a href=\\"/u/test/goals\\" data-reactid=\\"52\\">Goals</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"53\\">
              <a href=\\"/u/test/journal\\" data-reactid=\\"54\\">Journal</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"55\\">
              <a href=\\"/u/test/reads\\" data-reactid=\\"56\\">Reads</a>
            </li>
          </ul>
        </div>
        <h2 data-reactid=\\"57\\">Goals</h2>
        <div class=\\"markdown\\" data-reactid=\\"58\\">
          <p>Test user goals</p>
        </div>
        <ul data-reactid=\\"59\\">
          <li data-reactid=\\"60\\"><span data-reactid=\\"61\\">Goal</span></li>
          <li data-reactid=\\"62\\"><span data-reactid=\\"63\\">Goal - doing</span><span data-reactid=\\"64\\">&#xA0;&#x26CF;</span></li>
          <li data-reactid=\\"65\\"><span data-reactid=\\"66\\">Goal - done</span><span data-reactid=\\"67\\">&#xA0;&#x2714;</span></li>
        </ul>
      </div>
    </div>
    <footer data-reactid=\\"68\\">
      <div class=\\"container\\" data-reactid=\\"69\\">
        <hr data-reactid=\\"70\\">
        <p data-reactid=\\"71\\">
          <!-- react-text: 72 -->Brought to you with &#x2764; by
          <!-- /react-text -->
          <a href=\\"/about\\" data-reactid=\\"73\\">Nick Redmark</a>
          <!-- react-text: 74 -->. Support and discuss the development of this platform on
          <!-- /react-text -->
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\" data-reactid=\\"75\\">Patreon</a>
          <!-- react-text: 76 -->.
          <!-- /react-text -->
        </p>
      </div>
    </footer>
  </div>
</div>"
`;

exports[`user displays journal 1`] = `
"<div data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"-240399326\\">
  <div data-reactid=\\"2\\">
    <!-- react-empty: 3 -->
    <div style=\\"padding-top:50px;padding-bottom:20px;\\" data-reactid=\\"4\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\" data-reactid=\\"5\\">
        <div class=\\"container\\" data-reactid=\\"6\\">
          <div class=\\"navbar-header\\" data-reactid=\\"7\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\" data-reactid=\\"8\\"><span class=\\"sr-only\\" data-reactid=\\"9\\">Toggle navigation</span><span class=\\"icon-bar\\" data-reactid=\\"10\\"></span><span class=\\"icon-bar\\" data-reactid=\\"11\\"></span><span class=\\"icon-bar\\" data-reactid=\\"12\\"></span></button>
            <a class=\\"navbar-brand\\"
              href=\\"/\\" data-reactid=\\"13\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\" data-reactid=\\"14\\">
            <ul class=\\"nav navbar-nav navbar-right\\" data-reactid=\\"15\\">
              <li class=\\"false\\" data-reactid=\\"16\\">
                <a href=\\"/\\" data-reactid=\\"17\\">Home</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"18\\">
                <a href=\\"/about\\" data-reactid=\\"19\\">About</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"20\\">
                <a href=\\"/news\\" data-reactid=\\"21\\">News</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"22\\">
                <a href=\\"/users\\" data-reactid=\\"23\\">Sorters</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"24\\">
                <a href=\\"/dashboard\\" data-reactid=\\"25\\">Dashboard</a>
              </li>
              <li class=\\"dropdownfalse\\" data-reactid=\\"26\\">
                <a href=\\"#\\" class=\\"dropdown-toggle\\" data-toggle=\\"dropdown\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"true\\" data-reactid=\\"27\\">
                  <!-- react-text: 28 -->Hello,
                  <!-- /react-text -->
                  <!-- react-text: 29 -->test
                  <!-- /react-text -->
                  <!-- react-text: 30 -->
                  <!-- /react-text --><span class=\\"caret\\" data-reactid=\\"31\\"></span></a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\" data-reactid=\\"32\\">
      <div data-reactid=\\"33\\">
        <div data-reactid=\\"34\\">
          <h1 data-reactid=\\"35\\">Test User</h1>
          <div class=\\"row\\" data-reactid=\\"36\\">
            <div class=\\"col-xs-6 col-sm-3 col-md-2\\" data-reactid=\\"37\\">
              <img alt=\\"Gravatar for undefined\\" style=\\"margin-bottom:24px;width:100%;height:auto;margin-left:auto;margin-right:auto;display:block;\\" src=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=200\\" srcset=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=400 2x\\"
                height=\\"200\\" width=\\"200\\" class=\\"react-gravatar\\" data-reactid=\\"38\\">
            </div>
            <div class=\\"col-xs-12 col-sm-9 col-md-10\\" data-reactid=\\"39\\">
              <p data-reactid=\\"40\\">
                <a href=\\"/u/test\\" data-reactid=\\"41\\">
                  <!-- react-text: 42 -->/u/
                  <!-- /react-text -->
                  <!-- react-text: 43 -->test
                  <!-- /react-text -->
                </a>
              </p>
              <div data-reactid=\\"44\\">
                <div class=\\"markdown\\" data-reactid=\\"45\\">
                  <p>Test user about</p>
                </div>
              </div>
            </div>
          </div>
          <ul class=\\"nav nav-tabs\\" data-reactid=\\"46\\">
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"47\\">
              <a href=\\"/u/test\\" data-reactid=\\"48\\">Activity</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"49\\">
              <a href=\\"/u/test/profile\\" data-reactid=\\"50\\">Profile</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"51\\">
              <a href=\\"/u/test/goals\\" data-reactid=\\"52\\">Goals</a>
            </li>
            <li role=\\"presentation\\" class=\\"active\\" data-reactid=\\"53\\">
              <a href=\\"/u/test/journal\\" data-reactid=\\"54\\">Journal</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"55\\">
              <a href=\\"/u/test/reads\\" data-reactid=\\"56\\">Reads</a>
            </li>
          </ul>
        </div>
        <h2 data-reactid=\\"57\\">Journal</h2>
        <div style=\\"margin-top:24px;margin-bottom:24px;\\" data-reactid=\\"58\\">
          <h3 data-reactid=\\"59\\">
            <a href=\\"http://www.example.com\\" data-reactid=\\"60\\">Hello World</a>
          </h3>
          <div class=\\"markdown\\" data-reactid=\\"61\\">
            <p>Lorem ipsum</p>
          </div>
          <!-- react-text: 62 -->Goals:
          <!-- /react-text --><span data-reactid=\\"63\\"><!-- react-text: 64 --><!-- /react-text --><!-- react-text: 65 -->&#xA0;<!-- /react-text --><em data-reactid=\\"66\\">Goal</em></span><span data-reactid=\\"67\\"><!-- react-text: 68 -->,<!-- /react-text --><!-- react-text: 69 -->&#xA0;<!-- /react-text --><em data-reactid=\\"70\\">Goal - doing</em></span>
          <hr
            data-reactid=\\"71\\">
        </div>
      </div>
    </div>
    <footer data-reactid=\\"72\\">
      <div class=\\"container\\" data-reactid=\\"73\\">
        <hr data-reactid=\\"74\\">
        <p data-reactid=\\"75\\">
          <!-- react-text: 76 -->Brought to you with &#x2764; by
          <!-- /react-text -->
          <a href=\\"/about\\" data-reactid=\\"77\\">Nick Redmark</a>
          <!-- react-text: 78 -->. Support and discuss the development of this platform on
          <!-- /react-text -->
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\" data-reactid=\\"79\\">Patreon</a>
          <!-- react-text: 80 -->.
          <!-- /react-text -->
        </p>
      </div>
    </footer>
  </div>
</div>"
`;

exports[`user displays profile 1`] = `
"<div data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"582567569\\">
  <div data-reactid=\\"2\\">
    <!-- react-empty: 3 -->
    <div style=\\"padding-top:50px;padding-bottom:20px;\\" data-reactid=\\"4\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\" data-reactid=\\"5\\">
        <div class=\\"container\\" data-reactid=\\"6\\">
          <div class=\\"navbar-header\\" data-reactid=\\"7\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\" data-reactid=\\"8\\"><span class=\\"sr-only\\" data-reactid=\\"9\\">Toggle navigation</span><span class=\\"icon-bar\\" data-reactid=\\"10\\"></span><span class=\\"icon-bar\\" data-reactid=\\"11\\"></span><span class=\\"icon-bar\\" data-reactid=\\"12\\"></span></button>
            <a class=\\"navbar-brand\\"
              href=\\"/\\" data-reactid=\\"13\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\" data-reactid=\\"14\\">
            <ul class=\\"nav navbar-nav navbar-right\\" data-reactid=\\"15\\">
              <li class=\\"false\\" data-reactid=\\"16\\">
                <a href=\\"/\\" data-reactid=\\"17\\">Home</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"18\\">
                <a href=\\"/about\\" data-reactid=\\"19\\">About</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"20\\">
                <a href=\\"/news\\" data-reactid=\\"21\\">News</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"22\\">
                <a href=\\"/users\\" data-reactid=\\"23\\">Sorters</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"24\\">
                <a href=\\"/dashboard\\" data-reactid=\\"25\\">Dashboard</a>
              </li>
              <li class=\\"dropdownfalse\\" data-reactid=\\"26\\">
                <a href=\\"#\\" class=\\"dropdown-toggle\\" data-toggle=\\"dropdown\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"true\\" data-reactid=\\"27\\">
                  <!-- react-text: 28 -->Hello,
                  <!-- /react-text -->
                  <!-- react-text: 29 -->test
                  <!-- /react-text -->
                  <!-- react-text: 30 -->
                  <!-- /react-text --><span class=\\"caret\\" data-reactid=\\"31\\"></span></a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\" data-reactid=\\"32\\">
      <div data-reactid=\\"33\\">
        <div data-reactid=\\"34\\">
          <h1 data-reactid=\\"35\\">Test User</h1>
          <div class=\\"row\\" data-reactid=\\"36\\">
            <div class=\\"col-xs-6 col-sm-3 col-md-2\\" data-reactid=\\"37\\">
              <img alt=\\"Gravatar for undefined\\" style=\\"margin-bottom:24px;width:100%;height:auto;margin-left:auto;margin-right:auto;display:block;\\" src=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=200\\" srcset=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=400 2x\\"
                height=\\"200\\" width=\\"200\\" class=\\"react-gravatar\\" data-reactid=\\"38\\">
            </div>
            <div class=\\"col-xs-12 col-sm-9 col-md-10\\" data-reactid=\\"39\\">
              <p data-reactid=\\"40\\">
                <a href=\\"/u/test\\" data-reactid=\\"41\\">
                  <!-- react-text: 42 -->/u/
                  <!-- /react-text -->
                  <!-- react-text: 43 -->test
                  <!-- /react-text -->
                </a>
              </p>
              <div data-reactid=\\"44\\">
                <div class=\\"markdown\\" data-reactid=\\"45\\">
                  <p>Test user about</p>
                </div>
              </div>
            </div>
          </div>
          <ul class=\\"nav nav-tabs\\" data-reactid=\\"46\\">
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"47\\">
              <a href=\\"/u/test\\" data-reactid=\\"48\\">Activity</a>
            </li>
            <li role=\\"presentation\\" class=\\"active\\" data-reactid=\\"49\\">
              <a href=\\"/u/test/profile\\" data-reactid=\\"50\\">Profile</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"51\\">
              <a href=\\"/u/test/goals\\" data-reactid=\\"52\\">Goals</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"53\\">
              <a href=\\"/u/test/journal\\" data-reactid=\\"54\\">Journal</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"55\\">
              <a href=\\"/u/test/reads\\" data-reactid=\\"56\\">Reads</a>
            </li>
          </ul>
        </div>
        <h2 data-reactid=\\"57\\">Summary</h2>
        <ul data-reactid=\\"58\\">
          <li data-reactid=\\"59\\">
            <!-- react-text: 60 -->3
            <!-- /react-text -->
            <!-- react-text: 61 -->
            <!-- /react-text -->
            <a href=\\"/u/test/goals\\" data-reactid=\\"62\\">goals</a>
          </li>
          <li data-reactid=\\"63\\">
            <!-- react-text: 64 -->0
            <!-- /react-text -->
            <!-- react-text: 65 -->
            <!-- /react-text -->
            <a href=\\"/u/test/journal\\" data-reactid=\\"66\\">journal entries</a>
          </li>
          <li data-reactid=\\"67\\">
            <!-- react-text: 68 -->3
            <!-- /react-text -->
            <!-- react-text: 69 -->
            <!-- /react-text -->
            <a href=\\"/u/test/reads\\" data-reactid=\\"70\\">books in reading list</a>
          </li>
        </ul>
        <div data-reactid=\\"71\\">
          <h2 data-reactid=\\"72\\">Links</h2>
          <ul data-reactid=\\"73\\">
            <li data-reactid=\\"74\\">
              <label style=\\"width:100px;margin-right:24px;\\" data-reactid=\\"75\\">Website</label>
              <a href=\\"http://website\\" data-reactid=\\"76\\">http://website</a>
            </li>
            <li data-reactid=\\"77\\">
              <label style=\\"width:100px;margin-right:24px;\\" data-reactid=\\"78\\">Blog</label>
              <a href=\\"http://blog\\" data-reactid=\\"79\\">http://blog</a>
            </li>
            <li data-reactid=\\"80\\">
              <label style=\\"width:100px;margin-right:24px;\\" data-reactid=\\"81\\">Youtube</label>
              <a href=\\"http://youtube\\" data-reactid=\\"82\\">http://youtube</a>
            </li>
            <li data-reactid=\\"83\\">
              <label style=\\"width:100px;margin-right:24px;\\" data-reactid=\\"84\\">Twitter</label>
              <a href=\\"http://twitter\\" data-reactid=\\"85\\">http://twitter</a>
            </li>
            <li data-reactid=\\"86\\">
              <label style=\\"width:100px;margin-right:24px;\\" data-reactid=\\"87\\">Reddit</label>
              <a href=\\"http://reddit\\" data-reactid=\\"88\\">http://reddit</a>
            </li>
            <li data-reactid=\\"89\\">
              <label style=\\"width:100px;margin-right:24px;\\" data-reactid=\\"90\\">Patreon</label>
              <a href=\\"http://patreon\\" data-reactid=\\"91\\">http://patreon</a>
            </li>
          </ul>
        </div>
        <div data-reactid=\\"92\\">
          <h2 data-reactid=\\"93\\">Bio</h2>
          <div class=\\"markdown\\" data-reactid=\\"94\\">
            <p>Test user bio</p>
          </div>
        </div>
      </div>
    </div>
    <footer data-reactid=\\"95\\">
      <div class=\\"container\\" data-reactid=\\"96\\">
        <hr data-reactid=\\"97\\">
        <p data-reactid=\\"98\\">
          <!-- react-text: 99 -->Brought to you with &#x2764; by
          <!-- /react-text -->
          <a href=\\"/about\\" data-reactid=\\"100\\">Nick Redmark</a>
          <!-- react-text: 101 -->. Support and discuss the development of this platform on
          <!-- /react-text -->
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\" data-reactid=\\"102\\">Patreon</a>
          <!-- react-text: 103 -->.
          <!-- /react-text -->
        </p>
      </div>
    </footer>
  </div>
</div>"
`;

exports[`user displays reads 1`] = `
"<div data-reactroot=\\"\\" data-reactid=\\"1\\" data-react-checksum=\\"2131278214\\">
  <div data-reactid=\\"2\\">
    <!-- react-empty: 3 -->
    <div style=\\"padding-top:50px;padding-bottom:20px;\\" data-reactid=\\"4\\">
      <nav class=\\"navbar navbar-inverse navbar-fixed-top\\" data-reactid=\\"5\\">
        <div class=\\"container\\" data-reactid=\\"6\\">
          <div class=\\"navbar-header\\" data-reactid=\\"7\\">
            <button type=\\"button\\" class=\\"navbar-toggle collapsed\\" data-toggle=\\"collapse\\" data-target=\\"#navbar\\" aria-expanded=\\"false\\" aria-controls=\\"navbar\\" data-reactid=\\"8\\"><span class=\\"sr-only\\" data-reactid=\\"9\\">Toggle navigation</span><span class=\\"icon-bar\\" data-reactid=\\"10\\"></span><span class=\\"icon-bar\\" data-reactid=\\"11\\"></span><span class=\\"icon-bar\\" data-reactid=\\"12\\"></span></button>
            <a class=\\"navbar-brand\\"
              href=\\"/\\" data-reactid=\\"13\\">Sorters Club</a>
          </div>
          <div id=\\"navbar\\" class=\\"collapse navbar-collapse\\" data-reactid=\\"14\\">
            <ul class=\\"nav navbar-nav navbar-right\\" data-reactid=\\"15\\">
              <li class=\\"false\\" data-reactid=\\"16\\">
                <a href=\\"/\\" data-reactid=\\"17\\">Home</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"18\\">
                <a href=\\"/about\\" data-reactid=\\"19\\">About</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"20\\">
                <a href=\\"/news\\" data-reactid=\\"21\\">News</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"22\\">
                <a href=\\"/users\\" data-reactid=\\"23\\">Sorters</a>
              </li>
              <li class=\\"false\\" data-reactid=\\"24\\">
                <a href=\\"/dashboard\\" data-reactid=\\"25\\">Dashboard</a>
              </li>
              <li class=\\"dropdownfalse\\" data-reactid=\\"26\\">
                <a href=\\"#\\" class=\\"dropdown-toggle\\" data-toggle=\\"dropdown\\" role=\\"button\\" aria-haspopup=\\"true\\" aria-expanded=\\"true\\" data-reactid=\\"27\\">
                  <!-- react-text: 28 -->Hello,
                  <!-- /react-text -->
                  <!-- react-text: 29 -->test
                  <!-- /react-text -->
                  <!-- react-text: 30 -->
                  <!-- /react-text --><span class=\\"caret\\" data-reactid=\\"31\\"></span></a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
    <div class=\\"container\\" data-reactid=\\"32\\">
      <div data-reactid=\\"33\\">
        <div data-reactid=\\"34\\">
          <h1 data-reactid=\\"35\\">Test User</h1>
          <div class=\\"row\\" data-reactid=\\"36\\">
            <div class=\\"col-xs-6 col-sm-3 col-md-2\\" data-reactid=\\"37\\">
              <img alt=\\"Gravatar for undefined\\" style=\\"margin-bottom:24px;width:100%;height:auto;margin-left:auto;margin-right:auto;display:block;\\" src=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=200\\" srcset=\\"//www.gravatar.com/avatar/23463b99b62a72f26ed677cc556c44e8?d=retro&amp;r=g&amp;s=400 2x\\"
                height=\\"200\\" width=\\"200\\" class=\\"react-gravatar\\" data-reactid=\\"38\\">
            </div>
            <div class=\\"col-xs-12 col-sm-9 col-md-10\\" data-reactid=\\"39\\">
              <p data-reactid=\\"40\\">
                <a href=\\"/u/test\\" data-reactid=\\"41\\">
                  <!-- react-text: 42 -->/u/
                  <!-- /react-text -->
                  <!-- react-text: 43 -->test
                  <!-- /react-text -->
                </a>
              </p>
              <div data-reactid=\\"44\\">
                <div class=\\"markdown\\" data-reactid=\\"45\\">
                  <p>Test user about</p>
                </div>
              </div>
            </div>
          </div>
          <ul class=\\"nav nav-tabs\\" data-reactid=\\"46\\">
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"47\\">
              <a href=\\"/u/test\\" data-reactid=\\"48\\">Activity</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"49\\">
              <a href=\\"/u/test/profile\\" data-reactid=\\"50\\">Profile</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"51\\">
              <a href=\\"/u/test/goals\\" data-reactid=\\"52\\">Goals</a>
            </li>
            <li role=\\"presentation\\" class=\\"false\\" data-reactid=\\"53\\">
              <a href=\\"/u/test/journal\\" data-reactid=\\"54\\">Journal</a>
            </li>
            <li role=\\"presentation\\" class=\\"active\\" data-reactid=\\"55\\">
              <a href=\\"/u/test/reads\\" data-reactid=\\"56\\">Reads</a>
            </li>
          </ul>
        </div>
        <h2 data-reactid=\\"57\\">Reads</h2>
        <div class=\\"markdown\\" data-reactid=\\"58\\">
          <p>Test user reading</p>
        </div>
        <ul data-reactid=\\"59\\">
          <li data-reactid=\\"60\\"><span data-reactid=\\"61\\">Read</span><span data-reactid=\\"62\\"><!-- react-text: 63 -->&#xA0;(<!-- /react-text --><a href=\\"http://example.com/article\\" data-reactid=\\"64\\">article</a><span data-reactid=\\"65\\">,&#xA0;</span>
            <a href=\\"http://example.com/video\\"
              data-reactid=\\"66\\">video</a>
            <!-- react-text: 67 -->)
            <!-- /react-text -->
            </span>
          </li>
          <li data-reactid=\\"68\\"><span data-reactid=\\"69\\">Read - reading</span><span data-reactid=\\"70\\">&#xA0;&#x1F441;</span></li>
          <li data-reactid=\\"71\\"><span data-reactid=\\"72\\">Read - read</span><span data-reactid=\\"73\\">&#xA0;&#x2714;</span></li>
        </ul>
      </div>
    </div>
    <footer data-reactid=\\"74\\">
      <div class=\\"container\\" data-reactid=\\"75\\">
        <hr data-reactid=\\"76\\">
        <p data-reactid=\\"77\\">
          <!-- react-text: 78 -->Brought to you with &#x2764; by
          <!-- /react-text -->
          <a href=\\"/about\\" data-reactid=\\"79\\">Nick Redmark</a>
          <!-- react-text: 80 -->. Support and discuss the development of this platform on
          <!-- /react-text -->
          <a href=\\"https://www.patreon.com/nickredmark\\" target=\\"_blank\\" data-reactid=\\"81\\">Patreon</a>
          <!-- react-text: 82 -->.
          <!-- /react-text -->
        </p>
      </div>
    </footer>
  </div>
</div>"
`;
